--- a/src/components/SideBar/NavItems/NavItem.css
+++ b/src/components/SideBar/NavItems/NavItem.css
@@ -1,17 +1,21 @@
 .navLinks {
     font-weight: 500;
-    font-size: large;
+    font-size: 95%;
     cursor: pointer;
-    color: #7c4cec;
+    color: #ab90f7;
     width: 100%;
     padding: 5% 0;
 }
-
 .navLinks:hover {
     background-color: #6f90d3;
+    border-left: 5px solid #043288;
+    color: black;
 }
 
 .icons {
     color: #a0b3da;
     margin-right: 5%;
+}
+.navLinks:hover .icons{
+    color: #ffffff;
 }
