--- a/src/components/Layout/Home/Home.css
+++ b/src/components/Layout/Home/Home.css
@@ -16,8 +16,13 @@
 }
 
 .homeHeaderMenu .icons {
-    padding-right: 5%;
+    padding-right: 10%;
     border-right: 2px solid grey;
+}
+
+.homeHeaderMenu .icons .notification {
+    cursor: pointer;
+    color: #a0b3da;
 }
 
 .homeProfile {
@@ -26,16 +31,20 @@
     justify-content: space-between;
 }
 
+.homeProfile .homeProfileText h2{
+    font-size: small;
+}
+
 .homeProfile .homeProfileText p{
-    font-size: smaller;
+    font-size: x-small;
 }
 
 .profileImage {
-    padding-left: 7%;
+    margin-left: 7%;
 }
 
 .profileImage img{
-    width: 45px;
-    height: 45px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
 }
