--- a/src/components/SideBar/SideBar.css
+++ b/src/components/SideBar/SideBar.css
@@ -10,6 +10,11 @@
   justify-content: space-evenly;
 }
 
+.sideBar .navLinks {
+  text-align: left;
+  padding-left: 25%;
+}
+
 .brandLogo img {
     width: 80%;
 }
