--- a/src/components/SideBar/NavItems/NavItem.css
+++ b/src/components/SideBar/NavItems/NavItem.css
@@ -5,6 +5,7 @@
     color: #ab90f7;
     width: 100%;
     padding: 5% 0;
+    transition: 0.5s;
 }
 .navLinks:hover {
     background-color: #6f90d3;
