--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -5,65 +5,13 @@
     position: relative;
 }
 
-.logLayout1, .logLayout2 {
-    display: inline-block;
-    width: 58%;
-    height: 99%;
-}
-.logLayout1 {
-    background-color: #dce4ffee;
-    border-radius: 100% 73% 91% 0% / 0% 73% 78% 36% ;
-}
-.loginImg, .logLayout2 {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
-.loginImg img {
-    width: 80%;
-    height: auto;
+.loginLayout input {
+    font-size: medium;
 }
 
-.logLayout2 {
-    width: 40%;
-    height: 100vh;
-    color: white;
-}
-
-.logLayout2UI, .logLayout2UI form{
-    margin: 0 auto;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    /* align-items: center; */
-    justify-content: center;
-}
-.logLayout2UI form {
-    width: 75%;
-    height: 60vh;
-}
-.logLayout2UI img {
-    width: 20%;
-    display: block;
-    margin: 2% auto;
-}
-.logLayout2UI div {
-    margin: 4% 0;
-}
-.logLayout2UI input {
+.loginLayout .submitBtn {
+    cursor: pointer;
     padding: 3%;
-    width: 100%;
-    border-radius: 5px;
-    border: none;
-}
-.logLayout2UI ::placeholder {
-    padding-left: 1rem;
-}
-.logLayout2UI .submitBtn {
-    padding: 1%;
     color: white;
     text-decoration: underline;
     margin: 2% 0;
@@ -71,22 +19,12 @@
     border: 1px solid white;
     border-radius: 5px;
 }
-.logLayout2UI .inputNo,
-.logLayout2UI .inputPass {
-    position: relative;
-}
-.logLayout2UI .loginIcon {
-    position: absolute;
-    top: 0.5rem;
-    left: 0.5rem;
-    color: #ab90f7;
-    font-size: larger;
-}
-.logLayout2UI p {
+
+.loginLayout p {
     font-size: small;
     text-align: center;
 }
-.logLayout2UI p span {
+.loginLayout p span {
     text-decoration: underline;
     cursor: pointer;
 }
