--- a/src/components/SideBar/NavItems/NavItem.css
+++ b/src/components/SideBar/NavItems/NavItem.css
@@ -13,6 +13,12 @@
     color: black;
 }
 
+.onFocus {
+    background-color: #6f90d3;
+    border-left: 5px solid #043288;
+    color: black;
+}
+
 .icons {
     color: #a0b3da;
     margin-right: 5%;
