still on mobile resonsiveness

--- a/src/components/Layout/HeaderTitle/HeaderTitle.css
+++ b/src/components/Layout/HeaderTitle/HeaderTitle.css
@@ -6,6 +6,9 @@
     align-items: center;
     justify-content: space-between;
 }
+.headerM svg {
+    display: none;
+}
 .homeHeaderMenu {
     width: 25%;
     display: flex;
