--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -4,3 +4,12 @@
     padding: 1% 3%;
     overflow-x: hidden;
 }
+
+/* MEDIA SCREEN STYLES */
+
+@media (max-width: 1024px) {
+    .webApp {
+        width: 100vw;
+        margin-left: 0;
+    }
+}
