--- a/src/components/Layout/Settings/Security/Security.css
+++ b/src/components/Layout/Settings/Security/Security.css
@@ -8,7 +8,7 @@
     padding: 5% 2%;
     display: flex;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     cursor: pointer;
     transition: 0.2s;
     font-size: small;
