--- a/src/components/Utilities/Modal/Modal.css
+++ b/src/components/Utilities/Modal/Modal.css
@@ -42,6 +42,16 @@
   padding: 2rem;
 }
 
+@media (max-width: 425px) {
+  .info {
+    font-size: medium;
+  }
+  .info img {
+    width: 50%;
+    padding: 10px;
+  }  
+}
+
 
 @keyframes pop {
     from {
