--- a/src/components/Layout/Support/Support.css
+++ b/src/components/Layout/Support/Support.css
@@ -136,7 +136,7 @@
     display: flex;
     text-align: center;
     align-items: center;
-    justify-content: end;
+    justify-content: flex-end;
 }
 
 .ticketStatus p {
