--- a/src/components/Layout/Home/ReqDelivery/ReqDelivery.css
+++ b/src/components/Layout/Home/ReqDelivery/ReqDelivery.css
@@ -1,6 +1,6 @@
 
 .reqDeliveryUI .selectVehicle {
-    margin-top: 3%;
+    /* margin-top: 3%; */
     width: 100%;
     height: 150px;
     background-color: #ab90f7;
@@ -21,6 +21,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.selectVehicle div:focus {
+    background-color: white;
+    color: #ab90f7;
 }
 
 .selectVehicle div:hover {
