--- a/src/components/Layout/Home/ReqDelivery/Summary/Summary.css
+++ b/src/components/Layout/Home/ReqDelivery/Summary/Summary.css
@@ -53,7 +53,7 @@
 .sumBtns div {
     margin: 0 3%;
     padding: 1% 3%;
-    border: 3px solid #ab90f7;
+    border: 2px solid #ab90f7;
     cursor: pointer;
     color: #ab90f7;
     border-radius: 10px;
@@ -133,4 +133,13 @@
 .driverActn .driverAss:hover {
     background-color: #ab90f7;
     color: white;
+}
+
+
+
+@media (max-width: 425px) {
+    .sumBtns div,
+    .driverActn .driverAss {
+        border: 1px solid #ab90f7;
+    }
 }
