--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 
 * {
   padding: 0;
@@ -7,10 +11,13 @@
 }
 
 ::selection {
-  background: #a3a5f7b4; /* WebKit/Blink Browsers */
+  background: #a3a5f7b4;
+  /* WebKit/Blink Browsers */
 }
+
 ::-moz-selection {
-  background: #a3a5f7b4; /* Gecko Browsers */
+  background: #a3a5f7b4;
+  /* Gecko Browsers */
 }
 
 body {
@@ -18,30 +25,40 @@ body {
   color: #282c34;
   position: relative;
 }
- a {
-   text-decoration: none;
- }
+
+a {
+  text-decoration: none;
+}
 
 body::-webkit-scrollbar {
-  width: 12px;               /* width of the entire scrollbar */
+  width: 12px;
+  /* width of the entire scrollbar */
 }
+
 body::-webkit-scrollbar-track {
-  background: #282c34;        /* color of the tracking area */
+  background: #282c34;
+  /* color of the tracking area */
 }
+
 body::-webkit-scrollbar-thumb {
-  background-color: #ab90f7;    /* color of the scroll thumb */
-  border-radius: 20px;       /* roundness of the scroll thumb */
-  border: 3px solid #282c34;  /* creates padding around scroll thumb */
+  background-color: #ab90f7;
+  /* color of the scroll thumb */
+  border-radius: 20px;
+  /* roundness of the scroll thumb */
+  border: 3px solid #282c34;
+  /* creates padding around scroll thumb */
 }
 
 .recentDeliveriesCards::-webkit-scrollbar,
-.orderStats::-webkit-scrollbar{
+.orderStats::-webkit-scrollbar {
   height: 6px;
 }
+
 .recentDeliveriesCards::-webkit-scrollbar-track,
 .orderStats::-webkit-scrollbar-track {
-  background: #282c34; 
+  background: #282c34;
 }
+
 .recentDeliveriesCards::-webkit-scrollbar-thumb,
 .orderStats::-webkit-scrollbar-thumb {
   background: #ab90f7;
@@ -49,15 +66,20 @@ body::-webkit-scrollbar-thumb {
 }
 
 .transactionHistories::-webkit-scrollbar {
-  width: 6px;   /* width of the entire scrollbar */
+  width: 6px;
+  /* width of the entire scrollbar */
 }
+
 .transactionHistories::-webkit-scrollbar-track {
   background: #282c34ce;
   border-radius: 20px;
 }
+
 .transactionHistories::-webkit-scrollbar-thumb {
-  background-color: #ac90f7c9;    /* color of the scroll thumb */
-  border-radius: 20px;       /* roundness of the scroll thumb */
+  background-color: #ac90f7c9;
+  /* color of the scroll thumb */
+  border-radius: 20px;
+  /* roundness of the scroll thumb */
 }
 
 input::-webkit-outer-spin-button,
@@ -69,4 +91,75 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+
+
+
+html {
+  scroll-behavior: smooth;
+}
+
+#header {
+  background: linear-gradient(to right, #000000ab 60%, black 25%), url(./images/templates/Truck-landing.jpg) no-repeat center center/cover;
+}
+
+.line::after {
+  content: '';
+  position: absolute;
+  top: 40px;
+  left: 0;
+  width: 30%;
+  height: 5px;
+  background: rgb(163, 160, 160);
+  display: block;
+}
+
+.dot::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -20px;
+  width: inherit;
+  height: inherit;
+  background: rgb(67, 129, 223);
+  border-radius: 50%;
+  display: inline-block;
+}
+
+/*
+
+.testimonial-head {
+  @apply container flex items-center w-screen h-auto p-4 gap-x-4 overflow-x-auto snap-x
+}
+
+.testimonial-card {
+  @apply pt-10 pb-6 px-4 w-64 flex-shrink-0 border border-gray-300 shadow-md snap-center
+}
+
+.footer-cont {
+  @apply flex flex-col items-center justify-center p-4 pb-0 mt-5 h-auto gap-x-4 gap-y-2 md: p-8 md:flex-row
+}
+
+.footer-header {
+  @apply tracking-wide text-gray-700 text-lg font-bold
+}
+
+.footer-text {
+  @apply block font-bold text-sm text-gray-500
+}
+
+.footer-link {
+  @apply font-bold text-base text-gray-600
+} */
+
+
+@media (max-width: 768px) {
+  #header {
+    background: linear-gradient(to bottom, #000000b0 60%, #000000b0 40%), url(./images/templates/Truck-landing.jpg) no-repeat center center/cover;
+  }
+
+  .up {
+    display: block;
+  }
 }
